font color fixed for dark mode

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -33,7 +33,6 @@ blockquote.twitter-tweet p{
   margin: 10px 0px;
   padding: 20px 25px;
   font-style: italic;
-  color: #555555;
   text-align:justify;
   min-height: 200px;
 }
@@ -88,13 +87,11 @@ blockquote.twitter-tweet p{
 .caption {
   font-size: 80%;
   text-align: center;
-  color: #646464;
 }
 
 figcaption {
   font-size: 80%;
   text-align: center;
-  color: #646464;
 }
 
 article.post h2,
